manifests/payments-api/overlays/demo/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: payments-api
  namespace: payments-demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app.kubernetes.io/name: payments-api
spec:
  to:
    kind: Service
    name: payments-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
